5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1664_2969.log
== TEST (2019-04-16 10:07:25) 
-- CODE:
q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(q == "2"):
	print(round(total, 2)
else:
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:07:52) 
-- CODE:
q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(q == "2"):
	print(round(total, 2)
if(q == "1"):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(q == "1"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:09:59) 
-- CODE:
q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(q == "2"):
	print(round(total, 2)
if(q == "1"):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(q == "1"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:13:03) 
-- CODE:
q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(q == "2"):
	print(round(total, 2)
if(q == "1"):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(q == "1"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:13:13) 
-- CODE:
q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(q == "2"):
	print(round(total, 2)
else:
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:13:37) 
-- CODE:
q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(q == "2"):
	print(round(total, 2)
-- ERROR:
File "XXXX", line 11
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:18) 
-- CODE:
q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(q == "2"):
	print(round(total, 2)

-- ERROR:
File "XXXX", line 11
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:20:34) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(Q == 2):
	print(total)
if(Q == 1):
	print(j1)
-- OUTPUT:
86.375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:20:52) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(Q == 2):
	print(round(total, 2)
if(Q == 1):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(Q == 1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:21:07) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(Q == 2):
	print(round(total, 2)
if(Q == 1):
	print(j1)
-- ERROR:
File "XXXX", line 11
    if(Q == 1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:21:15) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(Q == 2):
	print(total)
if(Q == 1):
	print(j1)
-- OUTPUT:
86.375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:21:27) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(Q == 2):
	print(total)
if(Q == 1):
	print(j1)
-- EXECUTION TIME:
0.13881
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
86.375
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
95.2525
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:21:51) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 - (j1 * d)

if(Q == 2):
	print(total)
if(Q == 1):
	print(j1)
-- OUTPUT:
86.375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:23:21) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	print(j2 - (j1 * d))
if(Q == 1):
	print(j1)
-- OUTPUT:
86.375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:24:01) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	print(j2 * (j1 - d))
if(Q == 1):
	print(j1)
-- OUTPUT:
5538.8125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:24:10) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	print(j2 * (j1 - d))
if(Q == 1):
	print(j1)
-- OUTPUT:
5538.8125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:24:38) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	print(round(j2 * (j1 - d), 2)
if(Q == 1):
	print(j1)
-- ERROR:
File "XXXX", line 9
    if(Q == 1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:24:49) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	print(j2 * (j1 - d))
if(Q == 1):
	print(j1)
-- OUTPUT:
5538.8125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:25:04) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	print(j2 - (j1 * d))
if(Q == 1):
	print(j1)
-- OUTPUT:
86.375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:25:12) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	print(j2 - (j1 * d))
if(Q == 1):
	print(j1)
-- EXECUTION TIME:
0.205606
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
86.375
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
95.2525
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:26:15) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q = 2):
	print(j2 - (j1 * d))
if(Q = 1):
	print(j1)
-- ERROR:
File "XXXX", line 7
    if(Q = 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:27:30) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q = 2):
	print(j2 - (j1 * d))
if(Q = 1):
	print(j1)
-- ERROR:
File "XXXX", line 7
    if(Q = 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:27:48) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	print(j2 - (j1 * d))
if(Q != 2):
	print(j1)
-- OUTPUT:
86.375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:27:54) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	print(j2 - (j1 * d))
if(Q != 2):
	print(j1)
-- EXECUTION TIME:
0.213635
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
86.375
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
95.2525
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:28:08) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	print(j2 + (j1 * d))
if(Q != 2):
	print(j1)
-- OUTPUT:
114.125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:41) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = j1 * 100 / 25

total = j2 + d

if(Q == 2):
	print(round(total, 2)
if(Q != 2):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(Q != 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:43) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = j1 * 100 / 25

total = j2 + d

if(Q == 2):
	print(round(total, 2)
if(Q != 2):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(Q != 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:44) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = j1 * 100 / 25

total = j2 + d

if(Q == 2):
	print(round(total, 2)
if(Q != 2):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(Q != 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:44) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = j1 * 100 / 25

total = j2 + d

if(Q == 2):
	print(round(total, 2)
if(Q != 2):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(Q != 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:44) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = j1 * 100 / 25

total = j2 + d

if(Q == 2):
	print(round(total, 2)
if(Q != 2):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(Q != 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:44) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = j1 * 100 / 25

total = j2 + d

if(Q == 2):
	print(round(total, 2)
if(Q != 2):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(Q != 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:44) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = j1 * 100 / 25

total = j2 + d

if(Q == 2):
	print(round(total, 2)
if(Q != 2):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(Q != 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:31:36) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 + (j1 * d)

if(Q == 2):
	print(round(total, 2)
if(Q != 2):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(Q != 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:31:48) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 + (j1 * d)

if(Q == "2"):
	print(round(total, 2)
if(Q != "2"):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(Q != "2"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:32:37) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 + (j1 * d)

if(Q == "2"):
	print(round(total, 2)
if(Q == "1"):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(Q == "1"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:32:48) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 + (j1 * d)

if(Q == "2"):
	print(round(total, 2)
else:
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:35:45) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 + (j1 * d)

if(Q == 2):
	print(round(total, 2)
if(Q == 1):
	print(round(j1, 2)
-- ERROR:
File "XXXX", line 11
    if(Q == 1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:37:20) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 + (j1 * d)

if(Q == "1"):
	print(j1)
if(Q == "2"):
	print(round(total, 2)
-- ERROR:
File "XXXX", line 13
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:37:21) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 + (j1 * d)

if(Q == "1"):
	print(j1)
if(Q == "2"):
	print(round(total, 2)
-- ERROR:
File "XXXX", line 13
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:37:22) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

total = j2 + (j1 * d)

if(Q == "1"):
	print(j1)
if(Q == "2"):
	print(round(total, 2)
-- ERROR:
File "XXXX", line 13
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:38:58) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == "2"):
	print(j1 + j2 * d)
-- ERROR:
File "XXXX", line 13
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:40:18) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == "2"):
	total = j1 + (j2 * 0.75)
else:
	total = j1
	
print(total)
-- OUTPUT:
55.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:40:24) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == "2"):
	total = j1 + (j2 * 0.75)
else:
	total = j1
	
print(total)
-- EXECUTION TIME:
0.240189
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
55.5
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
99.99
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:40:33) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == "2"):
	total = j1 + (j2 * d)
else:
	total = j1
	
print(total)
-- OUTPUT:
55.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:41:13) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == "2"):
	total = j2 + (j1 * d)
else:
	total = j1
	
print(total)
-- OUTPUT:
55.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:41:19) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == "2"):
	total = j2 + (j1 * d)
else:
	total = j1
	
print(total)
-- EXECUTION TIME:
0.209294
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
55.5
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
99.99
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:41:27) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == "2"):
	total = j2 + (j1 * d)
else:
	total = j1
	
print(round(total, 2)
-- ERROR:
File "XXXX", line 13
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:42:36) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == "2"):
	total = j2 + (j1 * d)
else:
	total = j1
	
print(round(total, 2))
-- OUTPUT:
55.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:29) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == "2"):
	total = j2 + (j1 * 2)
else:
	total = j1
	
print(round(total, 2))
-- OUTPUT:
55.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:39) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

if(Q == "2"):
	total = j2 + (j1 / 2)
else:
	total = j1
	
print(round(total, 2))
-- OUTPUT:
55.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:44:08) 
-- CODE:
Q = int(input("Quantidade de jogos (1 ou 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

if(Q == "2"):
	total = j2 + (j1 / 2)
else:
	total = j1
	
print(round(total, 2))
-- OUTPUT:
55.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:44:34) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

if(Q == 2):
	total = j2 + (j1 / 2)
else:
	total = j1
	
print(round(total, 2))
-- OUTPUT:
128.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:44:42) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

if(Q == 2):
	total = j2 + (j1 / 2)
else:
	total = j1
	
print(round(total, 2))
-- EXECUTION TIME:
0.195526
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
128.0
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
170.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:44:46) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

if(Q == 2):
	total = j2 + (j1 / 2)
else:
	total = j1
	
print(round(total, 2))
-- OUTPUT:
128.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:44:52) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

if(Q == 2):
	total = j2 + (j1 / 2)
else:
	total = j1
	
print(round(total, 2))
-- EXECUTION TIME:
0.255503
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
128.0
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
170.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:44:55) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

if(Q == 2):
	total = j2 + (j1 / 2)
else:
	total = j1
	
print(round(total, 2))
-- OUTPUT:
128.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:45:08) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

if(Q == 2):
	total = j2 + (j1 / 2)
else:
	total = j1
	
print(round(total, 2))
-- EXECUTION TIME:
0.168434
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
128.0
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
170.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:45:45) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	total = j2 + (j1 * d)
else:
	total = j1
	
print(round(total, 2))
-- OUTPUT:
114.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:46:28) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	total = j1 + (j2 * d)
else:
	total = j1
	
print(round(total, 2))
-- OUTPUT:
80.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:46:34) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	total = j1 + (j2 * d)
else:
	total = j1
	
print(round(total, 2))
-- EXECUTION TIME:
0.171837
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
80.56
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
130.05
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:46:55) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	total = j1 + (j2 * 0.75)
else:
	total = j1
	
print(round(total, 2))
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:47:01) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

d = 25 / 100

if(Q == 2):
	total = j1 + (j2 * 0.75)
else:
	total = j1
	
print(round(total, 2))
-- EXECUTION TIME:
0.168629
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:47:12) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

if(Q == 2):
	total = j1 + (j2 * 0.75)
else:
	total = j1
	
print(round(total, 2))
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:47:28) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))
j2 = float(input("Valor do jogo 2: "))

if(Q == 2):
	total = j1 + (j2 * 0.75)
else:
	total = j1
	
print(round(total, 2))
-- EXECUTION TIME:
0.114612
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:48:17) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))

if(Q == 2):
	j2 = float(input("Valor do jogo 2: "))
	total = j1 + (j2 * 0.75)
else:
	total = j1
	
print(round(total, 2))
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:48:25) 
-- CODE:
Q = int(input("Quantidade de jogos (1 / 2): "))
j1 = float(input("Valor do jogo 1: "))

if(Q == 2):
	j2 = float(input("Valor do jogo 2: "))
	total = j1 + (j2 * 0.75)
else:
	total = j1
	
print(round(total, 2))
-- EXECUTION TIME:
0.285596
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
72.65
-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
